Refactor HypothesisVerificationTool and enhance breakpoint detection; update parameter descriptions for clarity, streamline error handling, and implement parallel processing for breakpoint detection in SHAP curve aggregation